--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="/toDo/src/font-awesome-4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
 
+	<div class="container">
+		<!-- input for todos -->
+		<div id="add-task-container">
+			<input type="text" id="input-task" placeholder="Enter task...">
+				<button id="add-task">
+					<i class="fa fa-solid fa-plus"></i>
+				</button>
+		</div>
+		<!-- container for todos -->
+		<div id="task-container"></div>
+
+	</div>
 
 	<script src="app.js"></script>
 </body>
